--- a/layouts/shortcodes/bright-button.html
+++ b/layouts/shortcodes/bright-button.html
@@ -10,7 +10,7 @@
 */}}
 
 {{- $link := .Get "link" | default "" -}}
-{{- $icon := .Get "icon" | default "custom/headphones" -}}
+{{- $icon := .Get "icon" | default "" -}}
 {{- $text := .Get "text" | default "" -}}
 
 {{ $scheme := (urls.Parse $link).Scheme }}
@@ -22,7 +22,7 @@
 {{ end }}
 <div class="mt-10 flex items-center justify-center gap-x-6 pb-8">
 <a href="{{ $link | safeURL }}" {{ $target | safeHTMLAttr }} 
-   class="rounded-md bg-primary-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-primary-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">
+   class="rounded-md bg-primary-600 px-3.5 py-2.5 no-underline text-sm font-semibold text-white shadow-sm hover:bg-primary-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">
     {{ $text | markdownify | emojify }}
     {{ with $icon }}
     {{ partial "functions/get_icon" (dict "name" . "attributes" "style=\"height: 1em\" class='inline-block pl-2'") }}
